summary-app-charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summary-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: website-summarizer.local
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 3000
          - path: /scala
            pathType: Prefix
            backend:
              service:
                name: scala-service
                port:
                  number: 9000
